--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -105,6 +105,29 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT || 22 }}
           script: |
+            if ! command -v git &> /dev/null; then
+              echo "Git nao encontrado. Instalando..."
+              if command -v yum &> /dev/null; then
+                sudo yum install -y git
+              elif command -v apt-get &> /dev/null; then
+                sudo apt-get update && sudo apt-get install -y git
+              fi
+            fi
+            
+            if ! command -v docker &> /dev/null; then
+              echo "Docker nao encontrado. Instalando..."
+              curl -fsSL https://get.docker.com -o get-docker.sh
+              sudo sh get-docker.sh
+              sudo usermod -aG docker $USER
+              rm -f get-docker.sh
+            fi
+            
+            if ! command -v docker compose &> /dev/null && ! command -v docker-compose &> /dev/null; then
+              echo "Docker Compose nao encontrado. Instalando..."
+              sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo chmod +x /usr/local/bin/docker-compose
+            fi
+            
             PROJECT_DIR="$HOME/projeto-devops-docker"
             
             if [ ! -d "$PROJECT_DIR" ]; then
@@ -121,11 +144,11 @@ jobs:
             git reset --hard origin/main
             git clean -fd
             
-            docker compose -f docker-compose.prod.yml pull app
+            docker compose -f docker-compose.prod.yml pull app || docker-compose -f docker-compose.prod.yml pull app
             
-            docker compose -f docker-compose.prod.yml up -d --no-deps app
+            docker compose -f docker-compose.prod.yml up -d --no-deps app || docker-compose -f docker-compose.prod.yml up -d --no-deps app
             
-            docker compose -f docker-compose.prod.yml ps
+            docker compose -f docker-compose.prod.yml ps || docker-compose -f docker-compose.prod.yml ps
 
       - name: Verify deployment
         uses: appleboy/ssh-action@v1.0.0
@@ -137,6 +160,6 @@ jobs:
           script: |
             cd "$HOME/projeto-devops-docker"
             sleep 10
-            docker compose -f docker-compose.prod.yml ps
-            docker compose -f docker-compose.prod.yml logs app --tail=20
+            docker compose -f docker-compose.prod.yml ps || docker-compose -f docker-compose.prod.yml ps
+            docker compose -f docker-compose.prod.yml logs app --tail=20 || docker-compose -f docker-compose.prod.yml logs app --tail=20
 
