Atualiza .env.example com todas as variaveis necessarias para producao

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
 ﻿# Configuracoes do Banco de Dados PostgreSQL
-DB_HOST=db
-DB_PORT=5432
 DB_NAME=taskdb
 DB_USER=taskuser
-DB_PASSWORD=taskpassword
+DB_PASSWORD=altere_esta_senha_para_uma_senha_segura
+DB_PORT=5432
 
 # Configuracoes da Aplicacao
 APP_PORT=8000
 
-# Ambiente (development, production, testing)
-ENVIRONMENT=development
+# Configuracoes Docker para Producao
+DOCKER_USERNAME=seu_usuario_dockerhub
+IMAGE_TAG=latest
+
+# Ambiente
+ENVIRONMENT=production
