--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -110,20 +110,60 @@ jobs:
           script: |
             set -e
             
-            if ! command -v git &> /dev/null; then
-              echo "ERRO: Git nao esta instalado. Execute o script scripts/install-server.sh primeiro."
-              exit 1
-            fi
+            ensure_git() {
+              if command -v git &> /dev/null; then
+                echo "Git encontrado: $(git --version)"
+                return
+              fi
             
-            if ! command -v docker &> /dev/null; then
-              echo "ERRO: Docker nao esta instalado. Execute o script scripts/install-server.sh primeiro."
-              exit 1
-            fi
+              echo "Git nao encontrado. Instalando..."
+              if command -v apt-get &> /dev/null; then
+                sudo apt-get update
+                sudo DEBIAN_FRONTEND=noninteractive apt-get install -y git
+              elif command -v yum &> /dev/null; then
+                sudo yum update -y
+                sudo yum install -y git
+              else
+                echo "Nao foi possivel instalar Git automaticamente (nenhum apt-get ou yum encontrado)."
+                exit 1
+              fi
+            }
             
-            if ! command -v docker compose &> /dev/null && ! command -v docker-compose &> /dev/null; then
-              echo "ERRO: Docker Compose nao esta instalado. Execute o script scripts/install-server.sh primeiro."
-              exit 1
-            fi
+            ensure_docker() {
+              if command -v docker &> /dev/null; then
+                echo "Docker encontrado: $(docker --version)"
+                return
+              fi
+            
+              echo "Docker nao encontrado. Instalando..."
+              curl -fsSL https://get.docker.com -o /tmp/get-docker.sh
+              sudo sh /tmp/get-docker.sh
+              rm -f /tmp/get-docker.sh
+              sudo usermod -aG docker "$USER" || true
+              echo "Docker instalado: $(docker --version)"
+            }
+            
+            ensure_docker_compose() {
+              if command -v docker compose &> /dev/null; then
+                echo "Docker Compose plugin encontrado: $(docker compose version)"
+                return
+              fi
+            
+              if command -v docker-compose &> /dev/null; then
+                echo "Docker Compose standalone encontrado: $(docker-compose --version)"
+                return
+              fi
+            
+              echo "Docker Compose nao encontrado. Instalando versao standalone..."
+              DOCKER_COMPOSE_VERSION=$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep 'tag_name' | cut -d\" -f4)
+              sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo chmod +x /usr/local/bin/docker-compose
+              echo "Docker Compose instalado: $(docker-compose --version)"
+            }
+            
+            ensure_git
+            ensure_docker
+            ensure_docker_compose
             
             PROJECT_DIR="$HOME/projeto-devops-docker"
             
