--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -84,7 +84,7 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    timeout-minutes: 120
+    timeout-minutes: 30
     
     steps:
       - name: Checkout code
@@ -106,64 +106,39 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT || 22 }}
-          command_timeout: 120m
+          command_timeout: 20m
           script: |
             set -e
             
-            ensure_git() {
-              if command -v git &> /dev/null; then
-                echo "Git encontrado: $(git --version)"
-                return
-              fi
+            # Verificar pré-requisitos (instalação manual necessária)
+            if ! command -v git &> /dev/null; then
+              echo "ERRO: Git nao esta instalado."
+              echo "Execute no servidor: sudo apt-get update && sudo apt-get install -y git"
+              echo "Ou para Oracle Linux: sudo yum install -y git"
+              exit 1
+            fi
+            echo "Git encontrado: $(git --version)"
             
-              echo "Git nao encontrado. Instalando..."
-              if command -v apt-get &> /dev/null; then
-                sudo apt-get update
-                sudo DEBIAN_FRONTEND=noninteractive apt-get install -y git
-              elif command -v yum &> /dev/null; then
-                sudo yum update -y
-                sudo yum install -y git
-              else
-                echo "Nao foi possivel instalar Git automaticamente (nenhum apt-get ou yum encontrado)."
-                exit 1
-              fi
-            }
+            if ! command -v docker &> /dev/null; then
+              echo "ERRO: Docker nao esta instalado."
+              echo "Execute no servidor: curl -fsSL https://get.docker.com | sudo sh"
+              echo "Depois: sudo usermod -aG docker $USER && newgrp docker"
+              exit 1
+            fi
+            echo "Docker encontrado: $(docker --version)"
             
-            ensure_docker() {
-              if command -v docker &> /dev/null; then
-                echo "Docker encontrado: $(docker --version)"
-                return
-              fi
-            
-              echo "Docker nao encontrado. Instalando..."
-              curl -fsSL https://get.docker.com -o /tmp/get-docker.sh
-              sudo sh /tmp/get-docker.sh
-              rm -f /tmp/get-docker.sh
-              sudo usermod -aG docker "$USER" || true
-              echo "Docker instalado: $(docker --version)"
-            }
-            
-            ensure_docker_compose() {
-              if command -v docker compose &> /dev/null; then
-                echo "Docker Compose plugin encontrado: $(docker compose version)"
-                return
-              fi
-            
-              if command -v docker-compose &> /dev/null; then
-                echo "Docker Compose standalone encontrado: $(docker-compose --version)"
-                return
-              fi
-            
-              echo "Docker Compose nao encontrado. Instalando versao standalone..."
-              DOCKER_COMPOSE_VERSION=$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep 'tag_name' | cut -d\" -f4)
-              sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-              sudo chmod +x /usr/local/bin/docker-compose
-              echo "Docker Compose instalado: $(docker-compose --version)"
-            }
-            
-            ensure_git
-            ensure_docker
-            ensure_docker_compose
+            if ! command -v docker compose &> /dev/null && ! command -v docker-compose &> /dev/null; then
+              echo "ERRO: Docker Compose nao esta instalado."
+              echo "Execute no servidor:"
+              echo "  sudo curl -L \"https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)\" -o /usr/local/bin/docker-compose"
+              echo "  sudo chmod +x /usr/local/bin/docker-compose"
+              exit 1
+            fi
+            if command -v docker compose &> /dev/null; then
+              echo "Docker Compose encontrado: $(docker compose version)"
+            else
+              echo "Docker Compose encontrado: $(docker-compose --version)"
+            fi
             
             PROJECT_DIR="$HOME/projeto-devops-docker"
             
