--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -95,11 +95,21 @@ jobs:
           mkdir -p ~/.oci
           echo "${{ secrets.OCI_PRIVATE_KEY }}" > ~/.oci/api_key.pem
           chmod 600 ~/.oci/api_key.pem
+          echo "Chave privada OCI configurada"
+          ls -la ~/.oci/api_key.pem
 
       - name: Terraform Init
         working-directory: ${{ env.TERRAFORM_DIR }}
         env:
           TF_TOKEN_app_terraform_io: ${{ secrets.TF_API_TOKEN }}
+          TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
+          TF_VAR_user_ocid: ${{ secrets.OCI_USER_OCID }}
+          TF_VAR_fingerprint: ${{ secrets.OCI_FINGERPRINT }}
+          TF_VAR_private_key_path: ~/.oci/api_key.pem
+          TF_VAR_compartment_ocid: ${{ secrets.OCI_COMPARTMENT_OCID }}
+          TF_VAR_vcn_id: ${{ secrets.OCI_VCN_ID }}
+          TF_VAR_subnet_id: ${{ secrets.OCI_SUBNET_ID }}
+          TF_VAR_region: ${{ secrets.OCI_REGION }}
         run: |
           terraform init
 
