--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -105,7 +105,7 @@ jobs:
           TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
           TF_VAR_user_ocid: ${{ secrets.OCI_USER_OCID }}
           TF_VAR_fingerprint: ${{ secrets.OCI_FINGERPRINT }}
-          TF_VAR_private_key_path: ~/.oci/api_key.pem
+          TF_VAR_private_key: ${{ secrets.OCI_PRIVATE_KEY }}
           TF_VAR_compartment_ocid: ${{ secrets.OCI_COMPARTMENT_OCID }}
           TF_VAR_vcn_id: ${{ secrets.OCI_VCN_ID }}
           TF_VAR_subnet_id: ${{ secrets.OCI_SUBNET_ID }}
@@ -120,7 +120,7 @@ jobs:
           TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
           TF_VAR_user_ocid: ${{ secrets.OCI_USER_OCID }}
           TF_VAR_fingerprint: ${{ secrets.OCI_FINGERPRINT }}
-          TF_VAR_private_key_path: ~/.oci/api_key.pem
+          TF_VAR_private_key: ${{ secrets.OCI_PRIVATE_KEY }}
           TF_VAR_compartment_ocid: ${{ secrets.OCI_COMPARTMENT_OCID }}
           TF_VAR_vcn_id: ${{ secrets.OCI_VCN_ID }}
           TF_VAR_subnet_id: ${{ secrets.OCI_SUBNET_ID }}
@@ -135,7 +135,7 @@ jobs:
           TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
           TF_VAR_user_ocid: ${{ secrets.OCI_USER_OCID }}
           TF_VAR_fingerprint: ${{ secrets.OCI_FINGERPRINT }}
-          TF_VAR_private_key_path: ~/.oci/api_key.pem
+          TF_VAR_private_key: ${{ secrets.OCI_PRIVATE_KEY }}
           TF_VAR_compartment_ocid: ${{ secrets.OCI_COMPARTMENT_OCID }}
           TF_VAR_vcn_id: ${{ secrets.OCI_VCN_ID }}
           TF_VAR_subnet_id: ${{ secrets.OCI_SUBNET_ID }}
@@ -151,7 +151,7 @@ jobs:
           TF_VAR_tenancy_ocid: ${{ secrets.OCI_TENANCY_OCID }}
           TF_VAR_user_ocid: ${{ secrets.OCI_USER_OCID }}
           TF_VAR_fingerprint: ${{ secrets.OCI_FINGERPRINT }}
-          TF_VAR_private_key_path: ~/.oci/api_key.pem
+          TF_VAR_private_key: ${{ secrets.OCI_PRIVATE_KEY }}
           TF_VAR_compartment_ocid: ${{ secrets.OCI_COMPARTMENT_OCID }}
           TF_VAR_vcn_id: ${{ secrets.OCI_VCN_ID }}
           TF_VAR_subnet_id: ${{ secrets.OCI_SUBNET_ID }}
